# Pinocchio_Models

./: .ci_trigger.py  .clinerules  .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  TROUBLESHOOTING.md  conftest.py  docker-compose.yml  fix_mypy.py  fix_mypy2.py  model_pack.yaml  mypy2.txt  patch.diff  pin_issues.json  pr251.json  pyproject.toml  pyproject.toml.orig  requirements-lock.txt
.github/workflows/: Jules-Redundant-Issue-Closer.yml  Jules-Redundant-PR-Closer.yml  Verify-Issue-Closure.yml  anti-phantom-merge.yml  ci-standard.yml  lint-workflow-files.yml  local-only-runner-guard.yml  publish.yml  spec-check.yml
.hypothesis/constants/: 004e722d2b39195a  010258c38047fd64  031f85f1c11bb00b  03a0bc33c3be41ac  03bd112d320a4c6f  03d65cf548ce3b23  041b82baf95116f0  04f7314eda59da75  053b93b66911eb7b  05c2a50d27b71965  068c9e16d4886008  07475514dc0bbadb  07571a31fde0c54a  075aa0dd31e12c03  08291e0e367e6989  08a45b14b7a1aa82  08d19e98e031ec62  09ae28b390a241d0  0a6403dce3b6e280  0bb70d1826311e40  0bc3b2f77e74ecd9  0cfa12dfbf9e9abb  0dd70e49571bee14  110a1d1d892c7388  11a4fb9bf042a054  12cee98dc552128b  13efa0910df75e7a  146ce438f76c65d3  14a0113ee1045c2b  14ce7443b3faf241  1711dca7bbb78b0f  17e3f8cea4119fc7  18baa06439e76d96  1994d531a07d8adc  19d2fea1dbd1d293  1a5326b88fdd03ad  1b03421aacbc7cd8  1d84d5d1760fa3e0  1dc359315dc82348  1f4b62403fde35c2  (+298 more)
.jules/: bolt.md
assessments/: 2026-04-26-A-project-organization.md  2026-04-26-B-documentation.md  2026-04-26-C-type-coverage.md  2026-04-26-D-testing.md  2026-04-26-E-ci-cd.md  2026-04-26-F-code-quality.md  2026-04-26-G-dependencies.md  2026-04-26-H-security.md  2026-04-26-I-changelog-versioning.md  2026-04-26-J-error-handling.md  2026-04-26-K-performance.md  2026-04-26-L-maintainability.md  2026-04-26-M-dependency-health.md  2026-04-26-N-accessibility.md  2026-04-26-O-agentic-usability.md  2026-04-26-Pinocchio_Models-assessment.json  2026-04-26-comprehensive-assessment.json  2026-04-26-comprehensive-assessment.md  created_issues.json
benchmarks/: README.md
deploy/: README.md
docs/: README.md  api_reference.md  conf.py  developer_guide.md  index.rst  joint_axis_convention.md  performance_budget.md  performance_budget.yml
docs/adr/: 001-use-pinocchio-for-dynamics.md  README.md
docs/api/: index.rst
docs/architecture/: deep_traversal_audit.md  model_generation_flow.md
docs/assessments/: A-N_Assessment_2026-04-02.md  A-N_Assessment_2026-04-04.md  A-N_Assessment_2026-04-09.md  A-N_Assessment_2026-04-10.md  A-N_Assessment_2026-04-11.md  A-N_Assessment_2026-04-14.md  A-N_Assessment_2026-04-17.md  A-N_Assessment_2026-04-19.md  A-N_Assessment_2026-04-20.md  A-N_Assessment_2026-04-21.md  A-N_Assessment_2026-04-22.md  assessment_summary.json  initial_assessment.md
docs/security/: pip_audit_ignores.yml
examples/: README.md  __init__.py  basic_usage.py  crocoddyl_optimal_control.py  generate_all_models.py  gepetto_visualization.py  pink_inverse_kinematics.py
rust_core/: Cargo.toml
rust_core/src/: lib.rs
scripts/: check_docs_links.py  check_local_only_workflows.py  profile_model_generation.py  setup_dev.py
src/pinocchio_models/: __init__.py  __main__.py  exceptions.py  model_pack.py
src/pinocchio_models/addons/: __init__.py
src/pinocchio_models/addons/crocoddyl/: __init__.py  optimal_control.py  optimal_control_builders.py  optimal_control_config.py
src/pinocchio_models/addons/gepetto/: __init__.py  viewer.py
src/pinocchio_models/addons/pink/: __init__.py  ik_solver.py  ik_solver_phases.py  ik_solver_tasks.py
src/pinocchio_models/exercises/: __init__.py  base.py
src/pinocchio_models/exercises/bench_press/: bench_press_model.py
src/pinocchio_models/exercises/clean_and_jerk/: clean_and_jerk_model.py
src/pinocchio_models/exercises/deadlift/: deadlift_model.py
src/pinocchio_models/exercises/gait/: __init__.py  gait_model.py
src/pinocchio_models/exercises/sit_to_stand/: __init__.py  sit_to_stand_model.py
src/pinocchio_models/exercises/snatch/: snatch_model.py
src/pinocchio_models/exercises/squat/: squat_model.py
src/pinocchio_models/optimization/: __init__.py  exercise_objectives.py  trajectory_optimizer.py
src/pinocchio_models/optimization/objectives/: __init__.py  bench_press.py  clean_and_jerk.py  common.py  deadlift.py  gait.py  registry.py  sit_to_stand.py  snatch.py  squat.py
src/pinocchio_models/shared/: __init__.py  constants.py  theme.py
src/pinocchio_models/shared/barbell/: __init__.py  barbell_model.py
src/pinocchio_models/shared/body/: __init__.py  body_anthropometrics.py  body_model.py
src/pinocchio_models/shared/contact/: __init__.py  contact_model.py
src/pinocchio_models/shared/contracts/: __init__.py  postconditions.py  preconditions.py
src/robotics_contracts/: __init__.py  postconditions.py  preconditions.py
tests/: test_model_pack.py  test_pinocchio_api_contract.py
tests/benchmarks/: __init__.py  test_model_generation_benchmark.py
tests/integration/: test_all_exercises_build.py
tests/parity/: test_parity_compliance.py
tests/unit/: test_ci_workflow.py  test_cli.py  test_cli_helpers.py  test_cli_json.py  test_convenience_imports.py  test_examples.py  test_exceptions.py  test_performance_budget.py  test_pip_audit_ignores.py  test_rust_core.py
tests/unit/addons/: test_crocoddyl_oc.py  test_gepetto_viewer.py  test_optional_helper_builders.py  test_pink_ik.py
tests/unit/exercises/: test_attach_barbell_helpers.py  test_bench_press.py  test_clean_and_jerk.py  test_deadlift.py  test_gait.py  test_sit_to_stand.py  test_snatch.py  test_squat.py
tests/unit/optimization/: test_exercise_objectives.py
tests/unit/shared/: test_anthropometric_edge_cases.py  test_barbell.py  test_bilateral_limb_helpers.py  test_body_model.py  test_constants.py  test_contact_model.py  test_geometry.py  test_geometry_hypothesis.py  test_postconditions.py  test_preconditions.py  test_theme.py  test_urdf_helpers.py
(+5 files in other folders)
