[project]
name = "pinocchio-models"
version = "0.1.0"
description = "Pinocchio multibody models for classical barbell exercises with Gepetto, Pink IK, and Crocoddyl optimal control"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["pinocchio", "biomechanics", "simulation", "barbell", "strength-training", "urdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
pinocchio = [
    "pin>=3.0.0",
]
gepetto = [
    "gepetto-viewer-corba>=5.0.0",
]
pink = [
    "pin-pink>=4.1.0",
]
crocoddyl = [
    "crocoddyl>=2.0.0",
]
all-addons = [
    "pinocchio-models[pinocchio,gepetto,pink,crocoddyl]",
]
docs = [
    "sphinx>=8.0.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.0.0",
    "pyyaml>=6.0.0",
    "ruff>=0.14.0",
    "mypy>=1.15.0",
    "hypothesis>=6.151.13",
    "pytest-benchmark>=4.0.0",
    "pyyaml>=6.0.0",
    "sphinx>=8.0.0",
]

[project.scripts]
pinocchio-models = "pinocchio_models.__main__:main"

[project.entry-points."biomech.model_pack"]
pinocchio_models = "pinocchio_models.model_pack"

[project.urls]
Homepage = "https://github.com/D-sorganization/Pinocchio_Models"
Repository = "https://github.com/D-sorganization/Pinocchio_Models"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pinocchio_models", "src/robotics_contracts"]

[tool.hatch.build.targets.wheel.force-include]
"model_pack.yaml" = "pinocchio_models/model_pack.yaml"

[tool.hatch.build.targets.sdist]
include = [
    "src/pinocchio_models",
    "src/robotics_contracts",
    "model_pack.yaml",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "T201", "SIM",
    "C4", "PIE", "PLE", "FURB", "RSE", "LOG",
    "PERF", "RET", "C90",
]
ignore = [
    "E501",
    "RET504",
    "PERF203",
    "PERF401",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201"]
"tests/**" = ["T201"]
"examples/**" = ["T201"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

# ---------------------------------------------------------------------------
# Fleet Testing Standards (see Repository_Management/docs/FLEET_TESTING_STANDARDS.md §2)
# Tier: Data / fixtures repo -> no coverage gate added by Phase 1.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --strict-config --durations=20 -m \"not slow and not live_simulation and not e2e and not requires_network and not heavy\""
markers = [
    "unit: Pure logic, highly isolated, execution in < 100ms",
    "integration: Subsystem boundaries, DBs, I/O, heavy mocking",
    "e2e: Full system boot, real networks, user workflows",
    "slow: marks tests as slow",
    "live_simulation: marks tests as requiring live simulation environment",
    "requires_network: needs real outbound network",
    "heavy: resource-intensive tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
    "if TYPE_CHECKING:",
]
