[package]
name = "pinocchio_models_core"
version = "0.1.0"
edition = "2021"
description = "Rust accelerator for Pinocchio Models — parallel batch dynamics and interpolation"
license = "MIT"

[lib]
name = "pinocchio_models_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
rayon = "1.10"
